src/objects/Related_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Contacts</relationshipLabel>
        <relationshipName>Related_Contacts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Can_Act_on_Behalf_of_the_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Act on Behalf of the Contact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Related Contacts</relationshipLabel>
        <relationshipName>Related_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legacy Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Related_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Created_Date__c</fullName>
        <label>Legacy Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>401K Admin</fullName>
                </value>
                <value>
                    <fullName>Accountant</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Cousin</fullName>
                </value>
                <value>
                    <fullName>Co-worker</fullName>
                </value>
                <value>
                    <fullName>CPA</fullName>
                </value>
                <value>
                    <fullName>Daughter</fullName>
                </value>
                <value>
                    <fullName>Daughter-in-law</fullName>
                </value>
                <value>
                    <fullName>Decision Maker</fullName>
                </value>
                <value>
                    <fullName>Dist Manager</fullName>
                </value>
                <value>
                    <fullName>Ex-Spouse</fullName>
                </value>
                <value>
                    <fullName>Father</fullName>
                </value>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Grandchild</fullName>
                </value>
                <value>
                    <fullName>Granddaughter</fullName>
                </value>
                <value>
                    <fullName>Grandparent</fullName>
                </value>
                <value>
                    <fullName>Grandson</fullName>
                </value>
                <value>
                    <fullName>Lawyer</fullName>
                </value>
                <value>
                    <fullName>Mother</fullName>
                </value>
                <value>
                    <fullName>Neice</fullName>
                </value>
                <value>
                    <fullName>Nephew</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
                <value>
                    <fullName>POA</fullName>
                </value>
                <value>
                    <fullName>Sibling</fullName>
                </value>
                <value>
                    <fullName>Signatory</fullName>
                </value>
                <value>
                    <fullName>Simple IRA</fullName>
                </value>
                <value>
                    <fullName>Son</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Related Contact</label>
    <nameField>
        <displayFormat>RC-{0}</displayFormat>
        <label>Relationship</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>